--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
             android:hint="아이디" />
 
         <EditText
+            android:id="@+id/txtpw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password" />
