--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:text="굿닥 이벤트"/>
+                android:text="굿닥 이벤트" />
             <Button
                 android:layout_marginLeft="10dp"
                 android:layout_width="0dp"
@@ -94,7 +94,8 @@
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            android:layout_marginLeft="10dp"/>
         <EditText
             android:id="@+id/Edtf"
             android:background="#00000000"
@@ -106,13 +107,15 @@
             android:id="@+id/btnf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:text="검색"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        >
 
        <TextView
         android:layout_marginTop="15dp"
